tests/NormalTests/paczka1/fuzzy1/10147711.err
Error in line 3: M8rgEsPj42 S458 64,8
Error in line 7: e8vK3ZGIn S458 86,4
Error in line 31: aGyc A576 82,7
Error in line 32: e8vK3ZGIn A576 384,6
